@@ -1,3 +1,8 @@
+2007-05-02  Sven Schuetz <sven@de.ibm.com>
+
+	* queryStatement.c:
+	Fixed 1711283: minor mem problem in qsRelease
+
 2007-04-27  Adrian Schuur
 
 	* support.c, support.h, providerRegister.c, providerRegister.h,
